--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -4,135 +4,17 @@
  * Update the foundational and global aspects of the page.
  */
 
-* {
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
+@import "variables";
+@import "buttons";
+@import "navbar";
+@import "subnav";
+@import "footer";
 
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-html {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
-
-  @media (min-width: 40em) {
-    font-size: 18px;
-  }
-}
-
-body {
-  color: #515151;
-  background-color: #fff;
-  -webkit-text-size-adjust: 100%;
-      -ms-text-size-adjust: 100%;
-}
-
-/* No `:visited` state is required by default (browsers will use `a`) */
-a {
-  color: #167bc2;
-  text-decoration: none;
-}
-a strong {
-  color: inherit;
-}
-/* `:focus` is linked to `:hover` for basic accessibility */
-a:hover,
-a:focus {
-  text-decoration: underline;
-}
-
-/* Headings */
-h1, h2, h3, h4, h5, h6 {
-  margin-bottom: .5rem;
-  font-weight: 700;
-  line-height: 1.25;
-  color: #313131;
-  text-rendering: optimizeLegibility;
-}
-h1 {
-  font-size: 2rem;
-}
-h2 {
-  margin-top: 1.5rem;
-  font-size: 1.5rem;
-}
-h3 {
-  margin-top: 1.5rem;
-  font-size: 1.25rem;
-}
-h4, h5, h6 {
-  margin-top: 1rem;
-  font-size: 1rem;
-}
-
-/* Body text */
-p {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-strong {
-  color: #303030;
-}
-
-
-/* Lists */
-ul, ol, dl {
-  margin-top: 0;
-  margin-bottom: 1rem;
-}
-
-dt {
-  font-weight: 700;
-}
-dd {
-  margin-bottom: .5rem;
-}
-
-/* Misc */
-hr {
-  position: relative;
-  margin: 1.5rem 0;
-  border: 0;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #fff;
-}
-
-
-/* Code */
-code,
-pre {
-  font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-}
-code {
-  font-size: 90%;
-  color: #b85861;
-}
-pre {
-  display: block;
-  margin-top: 0;
-  margin-bottom: 1rem;
-  padding: 1rem;
-  font-size: .8rem;
-  line-height: 1.4;
-  white-space: pre;
-  white-space: pre-wrap;
-  word-break: break-all;
-  word-wrap: break-word;
-  background-color: #f9f9f9;
-}
-pre code {
-  padding: 0;
-  font-size: 100%;
-  color: inherit;
-  background-color: transparent;
-}
+.f0 { font-size: 3rem; }
+.f2 { font-size: 2rem; }
+.f3 { font-size: 1.75rem; }
+.f5 { font-size: 1.25rem; }
+.fw-500 { font-weight: 500; }
 
 /* Pygments via Jekyll */
 .highlight {
@@ -192,12 +74,12 @@ tbody tr:nth-child(odd) th {
  * Center the page content.
  */
 
-.container {
-  max-width: 40rem;
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-  margin-left: auto;
-  margin-right: auto;
+.posts-container {
+  max-width: 760px;
+
+  @media (min-width: 40em) {
+    font-size: 18px;
+  }
 }
 
 
@@ -263,11 +145,15 @@ tbody tr:nth-child(odd) th {
 }
 
 /* Special case the opening paragraph */
-.post > .embed-responsive + p {
-  margin-top: 2rem;
-  font-size: 125%;
-  font-weight: 300;
-  color: #222;
+.post > p:first-of-type {
+  font-size: 130%;
+  color: $gray-700;
+  // font-weight: 300;
+  // color: #222;
+}
+
+.post .embed-responsive {
+  margin-bottom: 2rem;
 }
 
 
